--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MovieToWatchApp</string>
+    <string name="app_name">MovieToWatch</string>
     <string name="parenthesis_open">(</string>
     <string name="parenthesis_close">)</string>
     <string name="star_description">Star icon in black colour</string>
@@ -11,11 +11,11 @@
     <string name="cancel_icon">Cancel icon</string>
     <string name="movie_detail">Movie details</string>
     <string name="broken_image">Broken image indicating error</string>
-    <string name="rating">rating</string>
+    <string name="rating">Rating</string>
     <string name="per_ten">/10</string>
-    <string name="released">released</string>
+    <string name="released">Released</string>
     <string name="bordered_heart">bordered heart icon</string>
     <string name="tools_overview">101-year-old Rose DeWitt Bukater tells the story of her life aboard the Titanic, 84 years later. A young Rose boards the ship with her mother and fiancé. Meanwhile, Jack Dawson and Fabrizio De Rossi win third-class tickets aboard the ship</string>
-    <string name="language">language</string>
-    <string name="genre">genre</string>
+    <string name="language">Language</string>
+    <string name="genre">Genre</string>
 </resources>
